lang.java.statics.test/tests/positive/classes/fields/innerforward.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public B f;
    public class B {}
}

