lang.java.statics.test/tests/negative/names/import-missing-inner-class.no.javtest
STATIX fail java\.names\.member-type-name.*\"B\"
JAVAC  fail cannot find symbol

[C]
import p.A.B;
public class C {}

[p] {

    [A]
    package p;
    public class A {
        public class C {}
    }

}
